--- a/Day1_ML_journey.ipynb
+++ b/Day1_ML_journey.ipynb
@@ -39,12 +39,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"Hello Ashutosh\")"
+      ],
       "metadata": {
-        "id": "34ZbDQBAxLWX"
+        "id": "34ZbDQBAxLWX",
+        "outputId": "bdacd651-39ce-49d9-dc48-3493fbbf68bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Ashutosh\n"
+          ]
+        }
+      ]
     }
   ]
 }
