--- a/Day1_ML_journey.ipynb
+++ b/Day1_ML_journey.ipynb
@@ -44,10 +44,10 @@
       ],
       "metadata": {
         "id": "34ZbDQBAxLWX",
-        "outputId": "bdacd651-39ce-49d9-dc48-3493fbbf68bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bdacd651-39ce-49d9-dc48-3493fbbf68bd"
       },
       "execution_count": 1,
       "outputs": [
@@ -56,6 +56,91 @@
           "name": "stdout",
           "text": [
             "Hello Ashutosh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 400\n",
+        "b = 100\n",
+        "c = 400\n",
+        "\n",
+        "print(id(a))\n",
+        "print(id(b))\n",
+        "print(id(c))\n"
+      ],
+      "metadata": {
+        "id": "XvJ64yVi5qT-",
+        "outputId": "a8b5eb32-b134-41a8-ade7-c3753591b47b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "136969228857904\n",
+            "10760904\n",
+            "136969228860688\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import keyword as kw;\n",
+        "#this is how we can import keywords in python\n",
+        "\n",
+        "print(kw.kwlist)"
+      ],
+      "metadata": {
+        "id": "gpUcMKzT-hQ3",
+        "outputId": "b3730c48-016b-4177-f3f3-6af90490a90b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b,c = 10,20,10\n",
+        "print(id(a))\n",
+        "print(id(b))\n",
+        "print(id(c))"
+      ],
+      "metadata": {
+        "id": "XptJgm3U6h9U",
+        "outputId": "7866370a-b910-4096-e29d-bb7e879b2e70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10758024\n",
+            "10758344\n",
+            "10758024\n"
           ]
         }
       ]
